--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,15 +4,15 @@ project(Dunamis C)
 set(CMAKE_C_STANDARD 11)
 
 add_library(Dunamis STATIC
-        main.c
-        main.c
-        main.c
+        src/main.c
+        src/main.c
+        src/main.c
         src/Character/hero.c
         src/Character/hero.h)
 
 # Crea l'eseguibile "DunamisExe" (o qualsiasi altro nome preferisci)
 add_executable(dunamis
-        main.c)
+        src/main.c)
 
 # Linka la libreria "Dunamis" con l'eseguibile "DunamisExe"
 target_link_libraries(dunamis Dunamis)
